[tool.poetry]
name = "autobot"
version = "0.1.0"
description = "Telegram Bot creation made easy"
authors = ["andrewsap <andrewsapw@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
autobot = "autobot.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
tomli = "^2.0.1"
uvloop = "^0.17.0"
pyyaml = "^6.0"
aiogram = {version = "^3.0.0b5", allow-prereleases = true}
python-dotenv = "^0.21.0"
loguru = "^0.6.0"
networkx = "^2.8.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = {version = "^22.10.0", allow-prereleases = true}
autoflake = "^1.7.7"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
